--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon index.js"
-  },
+    "start": "node index.js"
+ }, 
   "keywords": [],
   "license": "ISC",
   "dependencies": {
